--- a/src/app/modules/modals/onboarding-modal/onboarding-modal.component.html
+++ b/src/app/modules/modals/onboarding-modal/onboarding-modal.component.html
@@ -1,15 +1,17 @@
 
 
 <full-modal [open]="isOpen" [backDropDismiss]="false" [id]="'walkthrough'" [bodyColor]="'white'" [headerClass]="'hidden'" [footerClass]="'bg-white ion-no-border'">
-
+  <!-- <ion-header class="ion-no-border">
     <ion-toolbar slot="fixed" color="white">
       <ion-title mode="md">
         <img [src]="'assets/img/logo.png'" />
       </ion-title>
     </ion-toolbar>
+  </ion-header> -->
 
-    <ion-content [fullscreen]="true">
-    </ion-content>
+    <!-- <ion-content [fullscreen]="true"> -->
+      <img src="assets/img/bg/radix mobile app design 6 girl.png" id="content-page" />
+    <!-- </ion-content> -->
 
   <!-- <ion-button (click)="globals.closeModal('walkthroughmodal')" routerLink="/login" size="default" color="primary" class="no-shadow ion-margin onboard-button">
     <span class="fs-14 ion-padding-end ion-padding-start">Get Started</span>
