--- a/src/app/modules/tabs/tabs.page.html
+++ b/src/app/modules/tabs/tabs.page.html
@@ -1,6 +1,6 @@
 
 <!-- <mobile-header (onclick)="globals.openModal($event)" [refresh]="globals.pageRefresh" [color]="'white'" [title]="globals.pageData?.title | lowercase"></mobile-header> -->
-<mobile-layout (onHeaderButtonClicked)="globals.openModal($event)" [refresh]="globals.pageRefresh" [title]="globals.pageData?.title | lowercase"></mobile-layout>
+<mobile-layout (onHeaderButtonClicked)="globals.openModal($event)" [username]="userService.user?.NAME || userService.user?.FIRSTNAME" [accountnumber]="globals.config.pin" [refresh]="globals.pageRefresh" [title]="globals.pageData?.title | lowercase"></mobile-layout>
 
 <profile-modal [isOpen]="globals.modalData?.profilemodal || false"></profile-modal>
 <language-modal [isOpen]="globals.modalData?.languagemodal || false"></language-modal>
