--- a/src/app/shared/components/loaders/onloading/onloading.component.html
+++ b/src/app/shared/components/loaders/onloading/onloading.component.html
@@ -1,6 +1,6 @@
 <div [ngClass]="bgColor" class="splash" align="center">
   <div align="center">
-    <img *ngIf="useImage == true" src="assets/imgs/logo.png" />
+    <img *ngIf="useImage == true" src="assets/img/logo.png" />
     <loading></loading>
   </div>
   <br />
