--- a/src/app/shared/components/layout/mobile/mobile-layout/mobile-layout.component.html
+++ b/src/app/shared/components/layout/mobile/mobile-layout/mobile-layout.component.html
@@ -1,6 +1,6 @@
 
 
 <div class="ion-page">
-    <mobile-header (onclick)="onHeaderButtonClicked.emit($event)" [refresh]="refresh" [color]="color" [title]="title"></mobile-header>
+    <mobile-header (onclick)="onHeaderButtonClicked.emit($event)" [username]="username" [accountnumber]="accountnumber" [refresh]="refresh" [color]="color" [title]="title"></mobile-header>
     <mobile-footer></mobile-footer>
 </div>
