--- a/src/theme/theme.scss
+++ b/src/theme/theme.scss
@@ -640,3 +640,27 @@ ion-title {
     width: 100vw !important;
     border: 0px solid var(--ion-color-white) !important;
 }
+
+.bg-img {
+//   background-image: url('/assets/img/bg/radix mobile app design 6 girl.png');
+//   --background-image: url('/assets/img/bg/radix mobile app design 6 girl.png');
+//   background-repeat: no-repeat !important;
+//   background-size: cover !important;
+//   height: 100vh !important;
+//   width: 65% !important;
+//   position: fixed !important;
+//   transform: scaleX(-1);
+//   right: -5vw !important;
+//   top: 0 !important;
+
+
+    --background: url('/assets/img/bg/1.png') 50% 20% !important;
+    background-repeat: no-repeat!important;
+    background-size: cover !important;
+    // height: 100vh !important;
+    // width: 60% !important;
+    position: fixed !important;
+    // background-color:  !important;
+//   background-size: cover !important;
+//   background-repeat: no-repeat !important;
+}
